<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="280dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <com.a2zkajuser.core.widgets.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_reason_text"
            android:textSize="20dp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@color/app_color"/>

        <com.a2zkajuser.core.widgets.CustomEdittext
            android:id="@+id/edit_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="15dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:background="@xml/edittext_curve_background_grey"
            android:hint="@string/other_cancel_enter_the_reason"
            android:padding="10dp"
            android:text="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <com.a2zkajuser.core.widgets.CustomButton
                android:id="@+id/other_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/app_color"
                android:text="@string/changepassword_lable_submit"
                android:textColor="@color/white" />

            <com.a2zkajuser.core.widgets.CustomButton
                android:id="@+id/other_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/app_color"
                android:text="@string/action_cancel"
                android:layout_marginLeft="20dp"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>