<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000">


    <android.support.v7.widget.CardView
        android:id="@+id/book_cardView_current_location_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        card_view:cardBackgroundColor="#ffffff"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="5dp">


        <RelativeLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="@drawable/material_card"
            android:minWidth="280dp">

            <com.a2zkajuser.core.widgets.CustomTextView
                android:id="@+id/pushNotification_alert_message_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/pushnotification_alert_message"
                android:textColor="#F05253"
                android:textSize="18dp"/>


            <com.a2zkajuser.core.widgets.CustomTextView
                android:id="@+id/pushNotification_alert_message_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pushNotification_alert_message_label"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="13dp"
                android:gravity="center"
                android:text="@string/pushnotification_alert_your_ride_has_been_completed"
                android:textColor="#8a000000"
                android:textSize="16dp"/>


            <RelativeLayout
                android:id="@+id/pushNotification_alert_ok_layout"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/pushNotification_alert_message_textView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:background="@color/app_color">

                <com.a2zkajuser.core.widgets.CustomTextView
                    android:id="@+id/pushNotification_alert_ok_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/action_ok"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

            </RelativeLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>