<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_banner_bg"
    tools:context="com.a2zkajuser.app.Facebookotppage">

    <RelativeLayout
        android:id="@+id/otp_layout_header"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/transparent_color">

        <RelativeLayout
            android:id="@+id/otp_header_back_layout"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="26dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:background="@null"
                android:src="@drawable/back_arrow" />
        </RelativeLayout>

        <com.a2zkajuser.core.widgets.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/otp_header_back_layout"
            android:text="@string/otp_label_verification"
            android:textColor="#FFFFFF"
            android:textSize="19sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/otp_layout_header"
        android:layout_centerHorizontal="true"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">


            <ImageView
                android:id="@+id/otp_logo_imageView"
                android:layout_width="160dp"
                android:layout_height="75dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:src="@mipmap/handylogo" />


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/otp_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="60dp"
                android:hint="@string/otp_label_enter_otp"
                android:inputType="textEmailAddress"
                android:paddingLeft="3dp"
                android:textCursorDrawable="@xml/edittext_cursor_color_white"
                android:textSize="16sp"
                app:met_accentTypeface="fonts/Roboto-Regular.ttf"
                app:met_autoValidate="true"
                app:met_baseColor="#D5D4D2"
                app:met_clearButton="false"
                app:met_errorColor="#FFFFFF"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="@string/otp_label_entered_otp"
                app:met_floatingLabelTextColor="#FFFFFF"
                app:met_hideUnderline="false"
                app:met_iconPadding="0dp"
                app:met_primaryColor="#D5D4D2"
                app:met_textColor="@color/white_color"
                app:met_textColorHint="#D5D4D2"
                app:met_typeface="fonts/Roboto-Regular.ttf"
                app:met_underlineColor="#D3D3D3" />


            <com.a2zkajuser.core.widgets.CustomButton
                android:id="@+id/otp_submit_button"
                android:layout_width="fill_parent"
                android:layout_height="43dp"
                android:layout_marginTop="30dp"
                android:background="#D5D4D2"
                android:text="@string/otp_label_send"
                android:textColor="#000000"
                android:textSize="16sp" />

            <com.a2zkajuser.core.widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
