<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_banner_bg">


    <ImageView
        android:id="@+id/signin_signup_p_logo"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"

        android:visibility="gone" />

    <ImageView
        android:id="@+id/signin_signup_plumber_boy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signin_signup_facebook_button"
        android:layout_below="@+id/signin_signup_p_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/cleaner_girl_image"
        android:visibility="visible" />

    <View
        android:id="@+id/signin_signup_center_view"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible" />

    <com.a2zkajuser.core.widgets.CustomButton
        android:id="@+id/signin_signup_facebook_button"
        android:layout_width="fill_parent"
        android:layout_height="43dp"
        android:layout_above="@+id/signin_signup_view1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@xml/button_curve_blue_background"
        android:text="@string/signIn_signUp_label_facebook"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:visibility="invisible" />


    <com.a2zkajuser.core.widgets.CustomButton
        android:id="@+id/signin_signup_signin_button"
        android:layout_width="fill_parent"
        android:layout_height="43dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="3dp"
        android:layout_toLeftOf="@+id/signin_signup_view1"
        android:background="@xml/button_curve_semi_white_background"
        android:text="@string/signIn_signUp_label_signin"
        android:textColor="#000000"
        android:textSize="15sp" />

    <View
        android:id="@+id/signin_signup_view1"
        android:layout_width="1px"
        android:layout_height="43dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:visibility="invisible" />

    <com.a2zkajuser.core.widgets.CustomButton
        android:id="@+id/signin_signup_signup_button"
        android:layout_width="fill_parent"
        android:layout_height="43dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="25dp"
        android:layout_toRightOf="@+id/signin_signup_view1"
        android:background="@xml/button_curve_semi_white_background"
        android:text="@string/signIn_signUp_label_signup"
        android:textColor="#000000"
        android:textSize="15sp" />

</RelativeLayout>